--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -247,6 +247,15 @@
                                         </ImageView>
                                     </graphic>
                                 </JFXButton>
+                        <JFXButton contentDisplay="CENTER" graphicTextGap="0.0" onAction="#setOtherButton" styleClass="jfx-button-node-list" stylesheets="@../css/pathfinding_tab.css" text=" ">
+                           <graphic>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../images/list.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </JFXButton>
                             </children>
                             <StackPane.margin>
                                 <Insets right="95.0" top="15.0" />
