--- a/Project/src/main/resources/servicerequests/service_request_other_main.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_other_main.fxml
@@ -8,19 +8,19 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #015080;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRO">
+<BorderPane maxWidth="900.0" minWidth="900.0" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #015080;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRO">
           <top>
-              <MenuBar nodeOrientation="RIGHT_TO_LEFT" style="-fx-background-color: #ffc41e;" stylesheets="@../css/background.css" BorderPane.alignment="TOP_LEFT">
+              <MenuBar maxWidth="900.0" nodeOrientation="RIGHT_TO_LEFT" prefWidth="900.0" style="-fx-background-color: #ffc41e;" stylesheets="@../css/background.css" BorderPane.alignment="TOP_LEFT">
                   <menus>
                       <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setCancelButton" text="Close">
                           <items>
@@ -37,8 +37,8 @@
                   </menus>
               </MenuBar>
           </top>
-   <center>
-      <GridPane prefWidth="900.0" BorderPane.alignment="CENTER">
+   <left>
+      <GridPane maxWidth="900.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="584.5999755859375" minWidth="10.0" prefWidth="382.5999755859375" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="477.4000244140625" minWidth="10.0" prefWidth="477.4000244140625" />
@@ -58,6 +58,11 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
+            <StackPane maxHeight="30.0" maxWidth="250.0" prefWidth="250.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" GridPane.rowIndex="3">
+               <children>
+                  <JFXTextField fx:id="nameTextField" maxWidth="250.0" prefWidth="250.0" />
+               </children>
+            </StackPane>
             <JFXButton onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.rowIndex="10" />
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Other Services">
                <font>
@@ -103,11 +108,10 @@
                   <Insets left="50.0" top="5.0" />
                </GridPane.margin>
             </Text>
-            <JFXTextField fx:id="nameTextField" maxWidth="250.0" prefWidth="250.0" GridPane.rowIndex="3" />
          </children>
          <BorderPane.margin>
-            <Insets left="20.0" right="20.0" />
+            <Insets right="20.0" />
          </BorderPane.margin>
       </GridPane>
-   </center>
+   </left>
       </BorderPane>
