--- a/Project/src/main/resources/servicerequests/service_request_other_main.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_other_main.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -46,11 +45,11 @@
          <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="6.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="8.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="8.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -64,8 +63,8 @@
                   <Font name="System Bold Italic" size="36.0" />
                </font>
             </Text>
-            <JFXComboBox fx:id="roomSelect" prefWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="5" />
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Select" GridPane.halignment="LEFT" GridPane.rowIndex="4">
+            <JFXComboBox fx:id="roomSelect" prefWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="4" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Select" GridPane.halignment="LEFT" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -73,7 +72,7 @@
                   <Insets left="50.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Service Type" GridPane.halignment="LEFT" GridPane.rowIndex="6">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Service Type" GridPane.halignment="LEFT" GridPane.rowIndex="5">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -81,7 +80,7 @@
                   <Insets left="50.0" />
                </GridPane.margin>
             </Text>
-            <JFXTextField fx:id="serviceTypeTextField" maxWidth="250.0" prefHeight="25.0" prefWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="7" />
+            <JFXTextField fx:id="serviceTypeTextField" maxWidth="250.0" prefHeight="25.0" prefWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="6" />
             <JFXTextArea fx:id="serviceMessage" maxHeight="400.0" maxWidth="400.0" minHeight="400.0" prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="BASELINE">
                <GridPane.margin>
                   <Insets />
@@ -95,7 +94,7 @@
                   <Insets bottom="20.0" left="50.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -103,7 +102,16 @@
                   <Insets left="50.0" top="5.0" />
                </GridPane.margin>
             </Text>
-            <JFXTextField fx:id="nameTextField" maxWidth="250.0" prefWidth="250.0" GridPane.rowIndex="3" />
+            <JFXTextField fx:id="nameTextField" maxWidth="250.0" prefWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="2" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" GridPane.halignment="LEFT" GridPane.rowIndex="7">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="50.0" />
+               </GridPane.margin>
+            </Text>
+            <JFXTextField maxWidth="250.0" minWidth="250.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="8" />
          </children>
          <BorderPane.margin>
             <Insets left="20.0" right="20.0" />
