--- a/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
@@ -45,24 +45,23 @@
       <GridPane prefWidth="250.0" style="-fx-background-color: #015080;">
          <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="122.20001220703125" minWidth="10.0" prefWidth="103.80001831054688" />
-            <ColumnConstraints maxWidth="96.19998168945312" minWidth="82.79998779296875" prefWidth="96.19998168945312" />
+            <ColumnConstraints />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="3.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="8.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="6.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-                    <JFXButton fx:id="clearButton" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" GridPane.halignment="LEFT" GridPane.rowIndex="7">
+                    <JFXButton fx:id="clearButton" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" GridPane.rowIndex="8">
                <GridPane.margin>
-                  <Insets left="30.0" />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </JFXButton>
                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Religious Services" GridPane.columnSpan="2" GridPane.halignment="LEFT">
@@ -81,12 +80,12 @@
                   <Insets bottom="5.0" left="20.0" />
                </GridPane.margin>
                     </Text>
-                    <JFXComboBox fx:id="roomSelect" prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="3">
+                    <JFXComboBox fx:id="roomSelect" prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets left="30.0" />
                </GridPane.margin>
             </JFXComboBox>
-                    <TextArea fx:id="serviceMessage" editable="false" maxWidth="185.0" prefHeight="220.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" wrapText="true" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                    <TextArea fx:id="serviceMessage" editable="false" maxHeight="220.0" maxWidth="185.0" prefHeight="220.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" wrapText="true" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="TOP">
                         <padding>
                             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                         </padding>
@@ -94,7 +93,7 @@
                   <Insets left="30.0" />
                </GridPane.margin>
                     </TextArea>
-                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP">
                         <font>
                             <Font name="System Bold" size="16.0" />
                         </font>
@@ -102,7 +101,7 @@
                   <Insets left="30.0" />
                </GridPane.margin>
                     </Text>
-                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Request" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="4">
+                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Request" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="TOP">
                         <font>
                             <Font name="System Bold" size="16.0" />
                         </font>
@@ -110,9 +109,22 @@
                   <Insets left="30.0" />
                </GridPane.margin>
                     </Text>
-                    <JFXButton fx:id="confirmButton" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" GridPane.halignment="LEFT" GridPane.rowIndex="6">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
                <GridPane.margin>
-                  <Insets left="14.0" />
+                  <Insets left="30.0" />
+               </GridPane.margin>
+            </Text>
+            <JFXTextField minWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="30.0" />
+               </GridPane.margin>
+            </JFXTextField>
+                    <JFXButton fx:id="confirmButton" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets left="10.0" />
                </GridPane.margin>
             </JFXButton>
          </children>
