completed sms for Baby sitting and religious services

--- a/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
@@ -196,7 +196,7 @@
                   <Insets left="30.0" />
                </GridPane.margin>
             </Text>
-            <JFXTextField maxWidth="185.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="7" GridPane.valignment="TOP" />
+            <JFXTextField fx:id="phoneNumber" maxWidth="185.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="7" GridPane.valignment="TOP" />
          </children>
       </GridPane>
    </left>
