--- a/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
@@ -117,7 +117,7 @@
                   <Insets left="30.0" />
                </GridPane.margin>
             </Text>
-            <JFXTextField minWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="7">
+            <JFXTextField fx:id="phoneNum" minWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets left="30.0" />
                </GridPane.margin>
