--- a/Project/src/main/resources/admintools/admin_tools_edit_reservations.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_edit_reservations.fxml
@@ -27,7 +27,7 @@
          <top>
             <MenuBar blendMode="LIGHTEN" nodeOrientation="LEFT_TO_RIGHT" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
               <menus>
-                <Menu mnemonicParsing="false" text="Back">
+                <Menu mnemonicParsing="false" onShowing="#setBackButton" text="Back">
                   <items>
                     <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
                   </items>
