--- a/Project/src/main/resources/admintools/admin_tools_application_setting.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_application_setting.fxml
@@ -30,7 +30,7 @@
          <top>
             <MenuBar blendMode="ADD" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
               <menus>
-                <Menu mnemonicParsing="false" text="Back">
+                <Menu mnemonicParsing="false" onShowing="#setBackMenuItem" text="Back">
                   <items>
                     <MenuItem fx:id="backMenuItem" mnemonicParsing="false" onAction="#setBackMenuItem" text="Go back to previous page" />
                   </items>
