--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -35,7 +35,7 @@
                 <ColorAdjust brightness="0.41" />
             </effect>
         </ImageView>
-        <BorderPane>
+        <BorderPane prefHeight="720.0">
             <center>
                 <StackPane BorderPane.alignment="CENTER">
                     <children>
@@ -291,7 +291,7 @@
                         </AnchorPane>
                         <Accordion fx:id="menu" maxWidth="300.0" prefWidth="300.0" StackPane.alignment="TOP_LEFT">
                             <panes>
-                                <TitledPane fx:id="pathfindingTitledPane" alignment="TOP_LEFT" maxWidth="300.0" onContextMenuRequested="#setTitledPane" onMouseClicked="#setTitledPane" prefWidth="300.0" stylesheets="@../css/pathfinding_tab.css" text="Find Path">
+                                <TitledPane fx:id="pathfindingTitledPane" alignment="TOP_LEFT" maxWidth="300.0" onContextMenuRequested="#setTitledPane" onMouseClicked="#setTitledPane" prefWidth="300.0" style="-fx-border-color: #ffc41e; -fx-border-width: 1;" stylesheets="@../css/pathfinding_tab.css" text="Find Path">
                                     <content>
                                         <GridPane fx:id="interfaceGrid" prefWidth="200.0" style="-fx-background-color: #015080;" stylesheets="/css/controlsGridpane.css">
                                             <columnConstraints>
@@ -358,7 +358,7 @@
                                         <Font name="System Bold" size="12.0" />
                                     </font>
                                 </TitledPane>
-                                <TitledPane fx:id="userToolsTitledPane" animated="false" styleClass="title" stylesheets="@../css/pathfinding_tab.css" text="User Tools">
+                                <TitledPane fx:id="userToolsTitledPane" animated="false" style="-fx-border-color: #ffc41e; -fx-border-width: 1;" styleClass="title" stylesheets="@../css/pathfinding_tab.css" text="User Tools">
                                     <content>
                                         <GridPane prefHeight="644.0" prefWidth="298.0" style="-fx-background-color: #015080;">
                                             <columnConstraints>
