--- a/Project/src/main/resources/reservations/reservations_main.fxml
+++ b/Project/src/main/resources/reservations/reservations_main.fxml
@@ -262,7 +262,7 @@
          <top>
                     <MenuBar style="-fx-background-color: #ffc41e;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                         <menus>
-                  <Menu fx:id="backButton" mnemonicParsing="false" text="Back">
+                  <Menu fx:id="backButton" mnemonicParsing="false" onShowing="#setBackButton" text="Back">
                     <items>
                       <MenuItem mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
                     </items>
