--- a/Project/src/main/resources/application/about_page.fxml
+++ b/Project/src/main/resources/application/about_page.fxml
@@ -27,7 +27,7 @@
          <top>
             <MenuBar style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
               <menus>
-                <Menu fx:id="back" mnemonicParsing="false" onAction="#setBack" onShowing="#setBack" text="Back">
+                <Menu fx:id="back" mnemonicParsing="false" onAction="#setBack" onShowing="#setBack" text="Home">
                   <items>
                     <MenuItem fx:id="backMenuItem" mnemonicParsing="false" text="Go back to previous page" />
                   </items>
