--- a/Project/src/main/resources/reservations/reservations_main_calendar_view.fxml
+++ b/Project/src/main/resources/reservations/reservations_main_calendar_view.fxml
@@ -22,9 +22,9 @@
             <top>
                 <MenuBar blendMode="LIGHTEN" nodeOrientation="LEFT_TO_RIGHT" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                     <menus>
-                        <Menu mnemonicParsing="false" onShowing="#setBackMenuItem" text="Back">
+                        <Menu mnemonicParsing="false" onShowing="#setBackButton" text="Back">
                             <items>
-                                <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackMenuItem" text="Go back to previous page" />
+                                <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
                             </items>
                         </Menu>
                         <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
